--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "copy-snippet",
-  "displayName": "copy-snippet",
+  "displayName": "Copy Snippet",
   "description": "Copy selection to the clipboard with relative path and line numbers.",
   "version": "0.0.1",
   "license": "MIT",
   "homepage": "https://github.com/chrisjdavies/vscode-copy-snippet",
+  "publisher": "chrisjdavies",
   "repository": {
     "type": "git",
     "url": "https://github.com/chrisjdavies/vscode-copy-snippet.git"
